# testdata

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
tests/: test_ddb.py  test_dems.py  test_dfits.py
