[tool.poetry]
name = "testdata"
version = "2.0.0"
description = "Public DESHIMA datasets for testing related codes"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = "^5.2"
scipy = "^1.10"
xarray = "^2023.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9"
ipython = "^8.15"
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
